{
  "version": 4,
  "terraform_version": "0.12.1",
  "serial": 34,
  "lineage": "3fb93038-77fb-791e-cae5-2edaec03f995",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "myelb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:067597475260:loadbalancer/my-terraform-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 100,
            "cross_zone_load_balancing": true,
            "dns_name": "my-terraform-elb-90318363.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/index.html",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "my-terraform-elb",
            "idle_timeout": 100,
            "instances": [
              "i-0502ac12447d37042",
              "i-0a8a9b40f907d1019"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "my-terraform-elb",
            "security_groups": [
              "sg-057bca730307c6b2b"
            ],
            "source_security_group": "067597475260/allow_http",
            "source_security_group_id": "sg-057bca730307c6b2b",
            "subnets": [
              "subnet-09e8df41db5601230",
              "subnet-0d2e830d64683c45a"
            ],
            "tags": {
              "Name": "my-terraform-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "depends_on": [
            "aws_instance.webservers",
            "aws_security_group.webserver",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webservers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c6b1d09930fac512",
            "arn": "arn:aws:ec2:us-east-1:067597475260:instance/i-0502ac12447d37042",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0502ac12447d37042",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0183624204dc59c10",
            "private_dns": "ip-10-20-1-107.ec2.internal",
            "private_ip": "10.20.1.107",
            "public_ip": "3.93.168.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0a42057f2613b78a9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-057bca730307c6b2b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d2e830d64683c45a",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-057bca730307c6b2b"
            ]
          },
          "depends_on": [
            "aws_security_group.webserver",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c6b1d09930fac512",
            "arn": "arn:aws:ec2:us-east-1:067597475260:instance/i-0a8a9b40f907d1019",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0a8a9b40f907d1019",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-05a838e8929c9cc5b",
            "private_dns": "ip-10-20-2-253.ec2.internal",
            "private_ip": "10.20.2.253",
            "public_ip": "54.162.203.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-069f9b268fb1a6b7c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-057bca730307c6b2b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09e8df41db5601230",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-057bca730307c6b2b"
            ]
          },
          "depends_on": [
            "aws_security_group.webserver",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0662d9829d661c9c3",
            "owner_id": "067597475260",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0cae7c678f1a117b6"
          },
          "depends_on": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f19d183929b0069e",
            "owner_id": "067597475260",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0662d9829d661c9c3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub_rt"
            },
            "vpc_id": "vpc-0cae7c678f1a117b6"
          },
          "depends_on": [
            "aws_internet_gateway.myigw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_attach",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078ba62b2e9c3293b",
            "route_table_id": "rtb-0f19d183929b0069e",
            "subnet_id": "subnet-0d2e830d64683c45a"
          },
          "depends_on": [
            "aws_route_table.pub_rt",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000dff177b451a941",
            "route_table_id": "rtb-0f19d183929b0069e",
            "subnet_id": "subnet-09e8df41db5601230"
          },
          "depends_on": [
            "aws_route_table.pub_rt",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067597475260:security-group/sg-057bca730307c6b2b",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057bca730307c6b2b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": null,
            "owner_id": "067597475260",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0cae7c678f1a117b6"
          },
          "depends_on": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067597475260:subnet/subnet-0d2e830d64683c45a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-0d2e830d64683c45a",
            "map_public_ip_on_launch": true,
            "owner_id": "067597475260",
            "tags": {
              "Name": "Subnet-1"
            },
            "vpc_id": "vpc-0cae7c678f1a117b6"
          },
          "depends_on": [
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067597475260:subnet/subnet-09e8df41db5601230",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-09e8df41db5601230",
            "map_public_ip_on_launch": true,
            "owner_id": "067597475260",
            "tags": {
              "Name": "Subnet-2"
            },
            "vpc_id": "vpc-0cae7c678f1a117b6"
          },
          "depends_on": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067597475260:vpc/vpc-0cae7c678f1a117b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-05cbad596de8eabad",
            "default_route_table_id": "rtb-0975c0867a1a6dc59",
            "default_security_group_id": "sg-0ea46ea7ae0cca6c6",
            "dhcp_options_id": "dopt-1482da6f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0cae7c678f1a117b6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0975c0867a1a6dc59",
            "owner_id": "067597475260",
            "tags": {
              "Name": "MyVPC"
            }
          }
        }
      ]
    }
  ]
}